// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree properties in open state: Of Button 1`] = `
{
  "expanded": true,
  "focused": true,
  "name": "Some Accordion",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree properties in open state: Of Panel 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "name": "Test content Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
      ],
      "name": "",
      "role": "generic",
    },
  ],
  "name": "Some Accordion",
  "role": "region",
}
`;

exports[`accessibility should expose correct initial accessibility tree and aria properties: Of Button 1`] = `
{
  "name": "Some Accordion",
  "role": "button",
}
`;
